Fixed some merge issues