@@ -3,7 +3,6 @@ package com.projectkorra.rpg.commands;
 import com.projectkorra.projectkorra.command.PKCommand;
 import org.bukkit.ChatColor;
 import org.bukkit.command.CommandSender;
-import org.bukkit.ChatColor;
 
 import java.util.*;
 
@@ -15,14 +14,14 @@ public class RPGCommandBase extends PKCommand {
 
     @Override
     public void execute(CommandSender sender, List<String> args) {
-        if (args.size() == 0) {
+        if (args.isEmpty()) {
             sender.sendMessage(ChatColor.RED + "/bending rpg avatar <Player> " + ChatColor.YELLOW + "Create an Avatar.");
             sender.sendMessage(ChatColor.RED + "/bending rpg help <Command/Event> " + ChatColor.YELLOW + "Display help.");
-            sender.sendMessage(ChatColor.RED + "/bending rpg worldevent <Argument> [Event] " + ChatColor.YELLOW + "Manipulate events.");
+            sender.sendMessage(ChatColor.RED + "/bending rpg event <Argument> [Event] " + ChatColor.YELLOW + "Start and stop events.");
             return;
         }
         for (RPGCommand command : RPGCommand.instances.values()) {
-            if (Arrays.asList(command.getAliases()).contains(args.get(0).toLowerCase())) {
+            if (Arrays.asList(command.getAliases()).contains(args.getFirst().toLowerCase())) {
                 command.execute(sender, args.subList(1, args.size()));
             }
         }
@@ -30,24 +29,24 @@ public class RPGCommandBase extends PKCommand {
 
     @Override
     protected List<String> getTabCompletion(CommandSender sender, List<String> args) {
-        if (args.size() == 0) {
-            List<String> l = new ArrayList<String>();
+        if (args.isEmpty()) {
+            List<String> l = new ArrayList<>();
             for (RPGCommand cmd : RPGCommand.instances.values()) {
                 l.add(cmd.getName());
             }
-            Collections.sort(l, Comparator.nullsLast(Comparator.naturalOrder()));
+            l.sort(Comparator.nullsLast(Comparator.naturalOrder()));
             return l;
         } else
             for (RPGCommand cmd : RPGCommand.instances.values()) {
-                if (Arrays.asList(cmd.getAliases()).contains(args.get(0).toLowerCase()) && sender.hasPermission("bending.command.rpg." + cmd.getName())) {
-                    List<String> newargs = new ArrayList<String>();
+                if (Arrays.asList(cmd.getAliases()).contains(args.getFirst().toLowerCase()) && sender.hasPermission("bending.command.rpg." + cmd.getName())) {
+                    List<String> newargs = new ArrayList<>();
                     for (int i = 1; i < args.size(); i++) {
-                        if (!(args.get(i).equals("") || args.get(i).equals(" ")) && args.size() >= 1)
+                        if (!(args.get(i).isEmpty() || args.get(i).equals(" ")))
                             newargs.add(args.get(i));
                     }
                     return cmd.getTabCompletion(sender, newargs);
                 }
             }
-        return new ArrayList<String>();
+        return new ArrayList<>();
     }
 }
